syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message UpdateUserRequest {
  int64 id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string last_name = 4;
  optional string password = 5;
}

message UpdateUserResponse {
  User user = 1;
}